feat: user creation
Adds the code necessary to create users. Unfortunately, due to the
Microsoft's Identity, the User's contructor had to be made public.
I also made changes to the structure and initialized the projects to be
used.

--- a/backend/src/Persistence/Persistence.csproj
+++ b/backend/src/Persistence/Persistence.csproj
@@ -5,14 +5,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-  
+
   <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-      <_Parameter1>Application.Tests</_Parameter1>
-    </AssemblyAttribute>
+    <PackageReference Include="EFCore.NamingConventions" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
+
 </Project>
