--- a/backend/src/Domain/Domain.csproj
+++ b/backend/src/Domain/Domain.csproj
@@ -8,4 +8,9 @@
 
   <ItemGroup>
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+  </ItemGroup>
 </Project>
