--- a/backend/src/API/appsettings.Development.json
+++ b/backend/src/API/appsettings.Development.json
@@ -7,5 +7,13 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=financial_manager;Username=postgres;Password=root;"
+  },
+  "AuthenticationOptions": {
+    "Secret": "64f51e99-c09c-4559-a6ca-fd32c4797b3e",
+    "ValidateIssuer": false,
+    "Issuer": "http://localhost",
+    "ExpirationInMinutes": 60,
+    "ValidateAudience": false,
+    "Audience": "http://localhost"
   }
 }
